ENH: provide RECOMMENDATION of the "Last, First" form for the Authors names
ATM there is no consistency across e.g. OpenNeuro datasets, e.g.

    ds006267/dataset_description.json:
      Authors=['Katherine M. Cole', 'Shau-Ming Wei', 'Pedro E. Martinez', 'Tuong-Vi Nguyen', 'Michael D. Gregory', 'J. Shane Kippenhan', 'Philip D. Kohn', 'Steven J. Soldin', 'Lynnette K. Nieman', 'Jack A. Yanovski', 'Peter J. Schmidt', 'Karen F. Berman']
    ds006269/dataset_description.json:
      Authors=['Lucy Pritchard', 'Ingrid Buller-Peralta', 'Sally M Till', 'Peter C Kind', 'Alfredo Gonzalez-Sulser']
    ds006303/dataset_description.json:
      Authors=['Linke, Julia', 'Naim, Reut', 'Haller, Simone', 'Khosravi, Parmis', 'Scheinberg, Beck', 'Byrne, Meghan', 'Harrewijn, Anita', 'Leibenluft, Ellen', 'Brotman, Melissa', 'Winkler, Anderson', 'Pine, Daniel']

and that is why some are left ambigous like

    ds003834/dataset_description.json:
      Authors=['Matteo Visconti di Oleggio Castello', 'James V. Haxby', 'M. Ida Gobbini']

where for Matteo I believe there is a composite last name of "Visconti di Oleggio Castello" per e.g.

	❯ curl --silent https://raw.githubusercontent.com/bids-standard/pybids/refs/heads/main/.zenodo.json | grep Matteo
		  "name": "Visconti di Oleggio Castello, Matteo",

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -208,6 +208,8 @@ Authors:
   display_name: Authors
   description: |
     List of individuals who contributed to the creation/curation of the dataset.
+    It is RECOMMENDED to use `Last, First` form to ensure clear separation of
+    First (Given) from Last (Family) name(s).
   type: array
   items:
     type: string
