--- a/src/schema/rules/sidecars/emg.yaml
+++ b/src/schema/rules/sidecars/emg.yaml
@@ -50,6 +50,9 @@ EMGRequired:
     - suffix == "emg"
   fields:
     EMGPlacementScheme: required
+    EMGPlacementSchemeDescription:
+      level: optional
+      level_addendum: required if `EMGPlacementScheme` is `"Other"`
     EMGReference: required
     SamplingFrequency:
       level: required
@@ -69,7 +72,6 @@ EMGRecommended:
     ElectrodeType: recommended
     EMGChannelCount: recommended
     EMGGround: recommended
-    EMGPlacementSchemeDescription: recommended
     EpochLength: recommended
     HardwareFilters: recommended
     Preamplification: recommended
@@ -87,3 +89,11 @@ EMGOptional:
     - suffix == "emg"
   fields:
     SkinPreparation: optional
+
+EMGPlacementSchemeDescription:
+  selectors:
+    - datatype == "emg"
+    - suffix == "emg"
+    - sidecar.EMGPlacementScheme == "Other"
+  fields:
+    EMGPlacementSchemeDescription: required
