--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -120,7 +120,7 @@ MImap:
     [Innis et al. 2007](https://journals.sagepub.com/doi/full/10.1038/sj.jcbfm.9600493) for unit descriptions.
     MImaps are derivatives of molecular imaging (PET or SPECT) raw data. They can
     either be unitless, e.g. a BP_ND or SUVR, or have the units ml/cm^3 for a V_T or pmol/ml
-    for average density maps (see e.g. [Beliveau et al. 2017](https://pmc.ncbi.nlm.nih.gov/articles/PMC5214625/)).
+    for average density maps (see [Beliveau et al. 2017](https://pmc.ncbi.nlm.nih.gov/articles/PMC5214625/)).
   unit: arbitrary
 MP2RAGE:
   value: MP2RAGE
