fix: Restrict eye-tracking column requirements to physio files

--- a/src/schema/rules/tabular_data/physio.yaml
+++ b/src/schema/rules/tabular_data/physio.yaml
@@ -10,6 +10,7 @@ PhysioColumns:
 
 PhysioEyeTracking:
   selectors:
+    - suffix == "physio"
     - sidecar.PhysioType == "eyetrack"
   columns:
     timestamp__eyetrack: required
