--- a/.github/workflows/publish_schema.yml
+++ b/.github/workflows/publish_schema.yml
@@ -35,6 +35,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3
+      - uses: actions/setup-node@v6
+        with:
+          node-version: 24
+          cache: 'npm'
       - run: env
       - run: git status
       - name: Determine master/maintenance branch
