--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -504,9 +504,9 @@ VFA:
     ([Deoni et al. 2005](https://doi.org/10.1002/mrm.20314)).
 act:
   value: act
-  display_name: Activities
+  display_name: Description of activities
   description: |
-    A JSON file containing objects describing activities.
+    A JSON file containing objects describing activities in the context of provenance.
     (See the [`Activities`](SPEC_ROOT/modality-agnostic-files/provenance.md#activities) section).
 angio:
   value: angio
@@ -620,15 +620,15 @@ electrodes:
     File that gives the location of (i)EEG electrodes.
 ent:
   value: ent
-  display_name: ProvEntities
+  display_name: Description of provEntities
   description: |
-    A JSON file containing objects describing provEntities.
+    A JSON file containing objects describing provEntities in the context of provenance.
     (See the [`ProvEntities`](SPEC_ROOT/modality-agnostic-files/provenance.md#proventities) section).
 env:
   value: env
-  display_name: Environments
+  display_name: Description of environments
   description: |
-    A JSON file containing objects describing environments.
+    A JSON file containing objects describing environments in the context of provenance.
     (See the [`Environments`](SPEC_ROOT/modality-agnostic-files/provenance.md#environments) section).
 epi:
   value: epi
@@ -837,9 +837,9 @@ probseg:
     This suffix may only be used in derivative datasets.
 soft:
   value: soft
-  display_name: Software
+  display_name: Description of software
   description: |
-    A JSON file containing objects describing software.
+    A JSON file containing objects describing software in the context of provenance.
     (See the [`Software`](SPEC_ROOT/modality-agnostic-files/provenance.md#software) section).
 sbref:
   value: sbref
